# spatialos-specs

./: .gitignore  .gitmodules  Cargo.toml  README.md
example/: Cargo.toml  rust_worker.json  world.json
example/schema/: player.schema
example/snapshots/: default.snapshot
example/src/: generated.rs  lib.rs  main.rs  player.rs  player_connection.rs
src/: commands.rs  component_registry.rs  entities.rs  generated_test.rs  lib.rs  spatial_reader.rs  spatial_writer.rs  storage.rs  system_commands.rs  world.rs
